fix: Table sticky scrollbar dangling when draging the table

--- a/src/table/styles.scss
+++ b/src/table/styles.scss
@@ -66,6 +66,8 @@
   padding-top: awsui.$space-table-content-top;
   padding-bottom: awsui.$space-table-content-bottom;
   overflow-x: auto;
+
+  scrollbar-width: none; /* Hide scrollbar in Firefox */
   &.variant-stacked,
   &.variant-container {
     & > .table {
@@ -85,6 +87,9 @@
   &:not(.has-header) {
     border-top-right-radius: awsui.$border-radius-container;
     border-top-left-radius: awsui.$border-radius-container;
+  }
+  &::-webkit-scrollbar {
+    display: none; /* Hide scrollbar in Safari and Chrome */
   }
 
   @include focus-visible.when-visible {
@@ -145,7 +150,7 @@ filter search icon.
 
 .sticky-scrollbar {
   height: 15px;
-  position: fixed;
+  position: sticky;
   display: none;
   overflow-x: auto;
   overflow-y: hidden;
